--- a/manual/text.tex
+++ b/manual/text.tex
@@ -152,6 +152,8 @@ in \verb|\displaystyle| (\verb|nomathmode| removes this attribute)
 (default), \verb|size.large=size(1)|, \verb|size.Large=size(2)|,
 \verb|size.LARGE=size(3)|, \verb|size.huge=size(4)|,
 \verb|size.Huge=size(5)|
+\item[Phantom text:] \verb|phantom| creates an textbox with the proper
+extents but without the text (\verb|nophantom| removes this attribute)
 \end{description}
 
 \section[Using the graphics-bundle with LaTeX]{Using the graphics-bundle with \LaTeX}
