- allow division of lengths by length - get rid of copy module
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1896 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -107,6 +107,8 @@ TODO:
       documentation)
     - support for string initialization removed
     - support for initialisation with other length removed
+    - lengths can now be divided by other lengths (as suggested by Michael Gruber
+      and Magnus Lie HHetland)
   - text module:
     - postpone reading of fontmap files until TeX/LaTeX is started
     - sign of font number in dvifile (reported by Michael Gruber)
